--- a/index.html
+++ b/index.html
@@ -5,17 +5,54 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/main.css">
-	<title></title>
+	<title>Coffee</title>
 </head>
 <body>
 	<header class="header">
-		<div class="container">
+		<div class="header__container container">
+			<div class="header__container-inner-wrapper">
+				<a class="header__logo" href="#">
+					<img src="./images/logo.svg" alt="logo" width="236" height="26">
+				</a>
+				<nav class="navbar">
+					<ul class="navbar__list">
+						<li class="navbar__item">
+							<a class="navbar__item-link" href="#">
+								HOME
+							</a>
+						</li>
+						<li class="navbar__item">
+							<a class="navbar__item-link" href="#">
+								ABOUT US
+							</a>
+						</li>
+						<li class="navbar__item">
+							<a class="navbar__item-link" href="#">
+								CREATE YOUR PLAN
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 	</header>
 	
 	<main>
-		<section class="hero"> 
-			<div class="container">
+		<section class="cbanner"> 
+			<div class="cbanner__container container">
+				<div class="cbanner__inner-wrapper">
+					<div class="cbanner__text-wrapper">
+						<h2 class="cbanner__heading">
+							Great coffee made simple.
+						</h2>
+						<p class="cbanner__text">
+							Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+						</p>
+						<a class="cbanner__button" href="#">
+							Create your plan
+						</a>
+					</div>
+				</div>
 			</div>
 		</section>        
 	</main>
