--- a/index.html
+++ b/index.html
@@ -54,7 +54,54 @@
 					</div>
 				</div>
 			</div>
-		</section>        
+		</section>      
+		<section class="collection">
+			<div class="collection__container container">
+				<div class="collection__inner-wrapper">
+					<ul class="collection__list">
+						<li class="collection__item">
+							<h3 class="collection__heading-gran">
+								Gran Espresso
+							</h3>
+							<p class="collection__description">
+								Light and flavorful blend with cocoa and black pepper for an intense experience.
+							</p>
+						</li>
+						<li class="collection__item">
+							<h3 class="collection__heading-gran">
+								Gran Espresso
+							</h3>
+							<p class="collection__description">
+								Light and flavorful blend with cocoa and black pepper for an intense experience.
+							</p>
+						</li>
+						<li class="collection__item">
+							<h3 class="collection__heading-gran">
+								Gran Espresso
+							</h3>
+							<p class="collection__description">
+								Light and flavorful blend with cocoa and black pepper for an intense experience.
+							</p>
+						</li>
+						<li class="collection__item">
+							<h3 class="collection__heading-gran">
+								Gran Espresso
+							</h3>
+							<p class="collection__description">
+								Light and flavorful blend with cocoa and black pepper for an intense experience.
+							</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>  
+		<section class="choose">
+			<div class="choose__container container">
+				<div class="choose__inner-wrapper">
+					
+				</div>
+			</div>
+		</section>
 	</main>
 	
 	<footer class="footer">
