--- a/index.html
+++ b/index.html
@@ -98,7 +98,42 @@
 		<section class="choose">
 			<div class="choose__container container">
 				<div class="choose__inner-wrapper">
-					
+					<div class="choose__top">
+						<h2 class="choose__top-heading">
+							Why choose us?
+						</h2>
+						<p class="choose__top-text">
+							A large part of our role is choosing which particular coffees will be in our range. This means working closely with the best coffee growers you a more impactful experience on every level.
+						</p>
+					</div>
+					<div class="choose__bottom">
+						<ul class="choose__list">
+							<li class="choose__bottom-item">
+								<h2 class="choose__item-heading-1">
+									Exclusive benefits
+								</h2>
+								<p class="choose__item-text">
+									Special offers and swag when you subscribe, including 30% off your first shipment.
+								</p>
+							</li>
+							<li class="choose__bottom-item">
+								<h2 class="choose__item-heading-2">
+									Best quality
+								</h2>
+								<p class="choose__item-text">
+									Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+								</p>
+							</li>
+							<li class="choose__bottom-item">
+								<h2 class="choose__item-heading-3">
+									Free shipping
+								</h2>
+								<p class="choose__item-text">
+									We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+								</p>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</section>
