--- a/index.html
+++ b/index.html
@@ -137,10 +137,85 @@
 				</div>
 			</div>
 		</section>
+		<section class="works">
+			<div class="works__container container">
+				<div class="works__inner-wrapper">
+					<h2 class="works__heading">
+						How it works
+					</h2>
+					<div class="works__plan">
+						<ol class="works__list">
+							<li class="works__item">
+								<span class="works__item--circle"></span>
+								<p class="works__item-number">01</p>
+								<h2 class="works__item-heading">
+									Pick your coffee
+								</h2>
+								<p class="works__item-text">
+									Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
+								</p>
+							</li>
+							<li class="works__item">
+								<span class="works__item--circle"></span>
+								<p class="works__item-number">02</p>
+								<h2 class="works__item-heading">
+									Choose the frequency
+								</h2>
+								<p class="works__item-text">
+									Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
+								</p>
+							</li>
+							<li class="works__item">
+								<span class="works__item--circle-1"></span>
+								<p class="works__item-number">03</p>
+								<h2 class="works__item-heading">
+									Receive and enjoy!
+								</h2>
+								<p class="works__item-text">
+									We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
+								</p>
+							</li>
+						</ol>
+						<a class="works__item-button" href="#">Create your plan</a>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	
 	<footer class="footer">
-		<div class="container">
+		<div class="footer__container container">
+			<div class="footer__inner-wrapper">
+				<a class="footer__logo" href="#">
+					<img src="./images/logo2.svg" alt="logo" width="235" height="25">
+				</a>
+				<nav class="footer__navbar">
+					<ul class="footer__list">
+						<li class="footer__item">
+							<a class="footer__item-link" href="#">
+								HOME
+							</a>
+							<a class="footer__item-link" href="#">
+								ABOUT US
+							</a>
+							<a class="footer__item-link" href="#">
+								Create your plan
+							</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="footer__icon-wrapper">
+					<a class="footer__icon-link" href="#">
+						<img src="./images/face.svg" alt="face" width="24" height="24">
+					</a>
+					<a class="footer__icon-link" href="#">
+						<img src="./images/twitter.svg" alt="twitter" width="24" height="24">
+					</a>	
+					<a class="footer__icon-link" href="#">
+						<img src="./images/inst.svg" alt="instagram" width="24" height="24">
+					</a>	
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
