--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							</a>
 						</li>
 						<li class="navbar__item">
-							<a class="navbar__item-link" href="#">
+							<a class="navbar__item-link" href="./about.html">
 								ABOUT US
 							</a>
 						</li>
@@ -195,7 +195,7 @@
 							<a class="footer__item-link" href="#">
 								HOME
 							</a>
-							<a class="footer__item-link" href="#">
+							<a class="footer__item-link" href="./about.html">
 								ABOUT US
 							</a>
 							<a class="footer__item-link" href="#">
