--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 				<nav class="navbar">
 					<ul class="navbar__list">
 						<li class="navbar__item">
-							<a class="navbar__item-link" href="#">
+							<a class="navbar__item-link" href="./index.html">
 								HOME
 							</a>
 						</li>
@@ -121,7 +121,7 @@
 				<nav class="footer__navbar">
 					<ul class="footer__list">
 						<li class="footer__item">
-							<a class="footer__item-link" href="#">
+							<a class="footer__item-link" href="./index.html">
 								HOME
 							</a>
 							<a class="footer__item-link" href="#">
