--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                         </ul>
                     </li>
                     <li class="headquarters__item">
-                        <h3 class="headquarters__item-heading-canada">United Kingdom</h3>
+                        <h3 class="headquarters__item-heading-canada">Canada</h3>
                         <ul class="headquarters__item-list">
                             <li class="headquarters__list-item">68  Asfordby Rd</li>
                             <li class="headquarters__list-item">Alcaston</li>
@@ -100,7 +100,7 @@
                         </ul>
                     </li>
                     <li class="headquarters__item">
-                        <h3 class="headquarters__item-heading-aus">United Kingdom</h3>
+                        <h3 class="headquarters__item-heading-aus">Australia</h3>
                         <ul class="headquarters__item-list">
                             <li class="headquarters__list-item">68  Asfordby Rd</li>
                             <li class="headquarters__list-item">Alcaston</li>
