responsible imgs for retina screen

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <section class="commitment">
             <div class="commitment__container container">
                 <div class="commitment__left">
-                    <img class="commitment__left-img" src="./images/commitment.png" alt="comm" width="445" height="520">
+                    <img class="commitment__left-img" src="./images/commitment.png" alt="comm" width="445" height="520" srcset=" ./images/commitment.png 1x , ./images/Brat@2x.png 2x">
                 </div>
                 <div class="commitment__right">
                     <h2 class="commitment__right-heading">
