added create section

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 							</a>
 						</li>
 						<li class="navbar__item">
-							<a class="navbar__item-link" href="#">
+							<a class="navbar__item-link" href="./plan.html">
 								CREATE YOUR PLAN
 							</a>
 						</li>
@@ -127,7 +127,7 @@
 							<a class="footer__item-link" href="#">
 								ABOUT US
 							</a>
-							<a class="footer__item-link" href="#">
+							<a class="footer__item-link" href="./plan.html">
 								Create your plan
 							</a>
 						</li>
