--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/main.css">
-	<title>Coffee</title>
+	<title>Home</title>
 </head>
 <body>
 	<header class="header">
@@ -27,7 +27,7 @@
 							</a>
 						</li>
 						<li class="navbar__item">
-							<a class="navbar__item-link" href="#">
+							<a class="navbar__item-link" href="./plan.html">
 								CREATE YOUR PLAN
 							</a>
 						</li>
@@ -198,7 +198,7 @@
 							<a class="footer__item-link" href="./about.html">
 								ABOUT US
 							</a>
-							<a class="footer__item-link" href="#">
+							<a class="footer__item-link" href="./plan.html">
 								Create your plan
 							</a>
 						</li>
