added step section to plan.html

--- a/plan.html
+++ b/plan.html
@@ -49,6 +49,46 @@
                 </div>
             </div>
         </section>
+		<section class="step">
+			<div class="step__container container">
+				<div class="step__inner-wrapper">
+					<div class="step__plan">
+						<ol class="step__list">
+							<li class="step__item">
+								<span class="step__item--circle"></span>
+								<p class="step__item-number">01</p>
+								<h2 class="step__item-heading">
+									Pick your coffee
+								</h2>
+								<p class="step__item-text">
+									Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
+								</p>
+							</li>
+							<li class="step__item">
+								<span class="step__item--circle"></span>
+								<p class="step__item-number">02</p>
+								<h2 class="step__item-heading">
+									Choose the frequency
+								</h2>
+								<p class="step__item-text">
+									Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
+								</p>
+							</li>
+							<li class="step__item">
+								<span class="step__item--circle-1"></span>
+								<p class="step__item-number">03</p>
+								<h2 class="step__item-heading">
+									Receive and enjoy!
+								</h2>
+								<p class="step__item-text">
+									We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
+								</p>
+							</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+		</section>
     </main>
     <footer class="footer">
 		<div class="footer__container container">
