--- a/plan.html
+++ b/plan.html
@@ -122,202 +122,224 @@
 						</ul>
 					</div>
 					<div class="drink__container-right">
-						<form action="https://echo.htmlacademy.ru/courses" >
-							<div class="drink__container-heading">
-								<h2 class="drink__heading-right">How do you drink your coffee?</h2>
-								<img src="./images/arrow_down.svg" class="drink__arrow-right" width="18" height="12">
-							</div>
-							<div class="drink__input-container">
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Capsule
-										</h3>
-										<p class="drink__input-text">
-											Compatible with Nespresso systems and similar brewers
-										</p>
-										<input class="drink__input" type="radio" name="how">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Filter
-										</h3>
-										<p class="drink__input-text">
-											For pour over or drip methods like Aeropress, Chemex, and V60
-										</p>
-										<input class="drink__input" type="radio" name="how">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Espresso
-										</h3>
-										<p class="drink__input-text">
-											Dense and finely ground beans for an intense, flavorful experience
-										</p>
-										<input class="drink__input" type="radio" name="how">
-									</label>
-								</div>
-							</div>
-							<div class="drink__container-heading">
-								<h2 class="drink__heading-right">What type of coffee?</h2>
-								<img src="./images/arrow_down.svg" class="drink__arrow-right" width="18" height="12">
-							</div>
-							<div class="drink__input-container">
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Single Origin
-										</h3>
-										<p class="drink__input-text">
-											Distinct, high quality coffee from a specific family-owned farm
-										</p>
-										<input class="drink__input" type="radio" name="type">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Decaf
-										</h3>
-										<p class="drink__input-text">
-											Just like regular coffee, except the caffeine has been removed
-										</p>
-										<input class="drink__input" type="radio" name="type">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Blended
-										</h3>
-										<p class="drink__input-text">
-											Combination of two or three dark roasted beans of organic coffees
-										</p>
-										<input class="drink__input" type="radio" name="type">
-									</label>
-								</div>
-							</div>
-							<div class="drink__container-heading">
-								<h2 class="drink__heading-right">How much would you like?</h2>
-								<img src="./images/arrow_down.svg" class="drink__arrow-right" width="18" height="12">
-							</div>
-							<div class="drink__input-container">
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											250g
-										</h3>
-										<p class="drink__input-text">
-											Perfect for the solo drinker. Yields about 12 delicious cups.
-										</p>
-										<input class="drink__input" type="radio" name="much">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											500g
-										</h3>
-										<p class="drink__input-text">
-											Perfect option for a couple. Yields about 40 delectable cups.
-										</p>
-										<input class="drink__input" type="radio" name="much">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											1000g
-										</h3>
-										<p class="drink__input-text">
-											Perfect for offices and events. Yields about 90 delightful cups.
-										</p>
-										<input class="drink__input" type="radio" name="much">
-									</label>
-								</div>
-							</div>
-							<div class="drink__container-heading">
-								<h2 class="drink__heading-right">Want us to grind them?</h2>
-								<img src="./images/arrow_down.svg" class="drink__arrow-right" width="18" height="12">
-							</div>
-							<div class="drink__input-container">
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Wholebean
-										</h3>
-										<p class="drink__input-text">
-											Best choice if you cherish the full sensory experience
-										</p>
-										<input class="drink__input" type="radio" name="grind">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Filter
-										</h3>
-										<p class="drink__input-text">
-											For drip or pour-over coffee methods such as V60 or Aeropress
-										</p>
-										<input class="drink__input" type="radio" name="grind" checked>
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Cafetiére
-										</h3>
-										<p class="drink__input-text">
-											Course ground beans specially suited for french press coffee
-										</p>
-										<input class="drink__input" type="radio" name="grind">
-									</label>
-								</div>
-							</div>
-							<div class="drink__container-heading">
-								<h2 class="drink__heading-right">How often should we deliver?</h2>
-								<img src="./images/arrow_down.svg" class="drink__arrow-right" width="18" height="12">
-							</div>
-							<div class="drink__input-container">
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Every week
-										</h3>
-										<p class="drink__input-text">
-											$7.20 per shipment. Includes free first-class shipping.
-										</p>
-										<input class="drink__input" type="radio" name="deliver">
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Every 2 weeks
-										</h3>
-										<p class="drink__input-text">
-											$9.60 per shipment. Includes free priority shipping.
-										</p>
-										<input class="drink__input" type="radio" name="deliver" >
-									</label>
-								</div>
-								<div class="drink__input-wrapper">
-									<label class="drink__input-label">
-										<h3 class="drink__input-heading">
-											Every month
-										</h3>
-										<p class="drink__input-text">
-											$12.00 per shipment. Includes free priority shipping.
-										</p>	
-										<input class="drink__input" type="radio" name="deliver">
-									</label>
-								</div>
-							</div>
+						<form class="drink__form" action="https://echo.htmlacademy.ru/courses" method="POST">
+							<ul class="drink__right-list">
+								<li class="drink__right-item">
+									<div class="drink__right-heading-wrapper">
+										<h2 class="drink__right-heading">
+											How do you drink your coffee?
+										</h2>
+										<button class="drink__list-arrow" type="button"></button>
+									</div>
+									<div class="drink__item-form">
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="drink">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Capsule
+												</span>
+												<span class="drink__form-item-text">
+													Compatible with Nespresso systems and similar brewers
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="drink">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Filter
+												</span>
+												<span class="drink__form-item-text">
+													For pour over or drip methods like Aeropress, Chemex, and V60
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="drink">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Espresso
+												</span>
+												<span class="drink__form-item-text">
+													Dense and finely ground beans for an intense, flavorful experience
+												</span>
+											</span>
+										</label>
+									</div>
+								</li>
+								<li class="drink__right-item">
+									<div class="drink__right-heading-wrapper">
+										<h2 class="drink__right-heading">
+											What type of coffee?
+										</h2>
+										<button class="drink__list-arrow" type="button"></button>
+									</div>
+									<div class="drink__item-form">
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="type">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Single Origin
+												</span>
+												<span class="drink__form-item-text">
+													Distinct, high quality coffee from a specific family-owned farm
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="type">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Decaf
+												</span>
+												<span class="drink__form-item-text">
+													Just like regular coffee, except the caffeine has been removed
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="type">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Blended
+												</span>
+												<span class="drink__form-item-text">
+													Combination of two or three dark roasted beans of organic coffees
+												</span>
+											</span>
+										</label>
+									</div>
+								</li>
+								<li class="drink__right-item">
+									<div class="drink__right-heading-wrapper">
+										<h2 class="drink__right-heading">
+											How much would you like?
+										</h2>
+										<button class="drink__list-arrow" type="button"></button>
+									</div>
+									<div class="drink__item-form">
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="much">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													250g
+												</span>
+												<span class="drink__form-item-text">
+													Perfect for the solo drinker. Yields about 12 delicious cups.
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="much">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													500g
+												</span>
+												<span class="drink__form-item-text">
+													Perfect option for a couple. Yields about 40 delectable cups.
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="much">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													1000g
+												</span>
+												<span class="drink__form-item-text">
+													Perfect for offices and events. Yields about 90 delightful cups.
+												</span>
+											</span>
+										</label>
+									</div>
+								</li>
+								<li class="drink__right-item">
+									<div class="drink__right-heading-wrapper">
+										<h2 class="drink__right-heading">
+											Want us to grind them?
+										</h2>
+										<button class="drink__list-arrow" type="button"></button>
+									</div>
+									<div class="drink__item-form">
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="grind">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Wholebean
+												</span>
+												<span class="drink__form-item-text">
+													Best choice if you cherish the full sensory experience
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="grind">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Filter
+												</span>
+												<span class="drink__form-item-text">
+													For drip or pour-over coffee methods such as V60 or Aeropress
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="grind">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Cafetiére
+												</span>
+												<span class="drink__form-item-text">
+													Course ground beans specially suited for french press coffee
+												</span>
+											</span>
+										</label>
+									</div>
+								</li>
+								<li class="drink__right-item">
+									<div class="drink__right-heading-wrapper">
+										<h2 class="drink__right-heading">
+											How often should we deliver?
+										</h2>
+										<button class="drink__list-arrow" type="button"></button>
+									</div>
+									<div class="drink__item-form">
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="deliver">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Every week
+												</span>
+												<span class="drink__form-item-text">
+													$7.20 per shipment. Includes free first-class shipping.
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="deliver">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Every 2 weeks
+												</span>
+												<span class="drink__form-item-text">
+													$9.60 per shipment. Includes free priority shipping.
+												</span>
+											</span>
+										</label>
+										<label class="drink__form-item">
+											<input class="drink__input" type="radio" name="deliver">
+											<span class="drink__form-item-wrapper">
+												<span class="drink__form-item-heading">
+													Every month
+												</span>
+												<span class="drink__form-item-text">
+													$12.00 per shipment. Includes free priority shipping.
+												</span>
+											</span>
+										</label>
+									</div>
+								</li>
+							</ul>
 						</form>
 					</div>
 				</div>
