added responsive mode to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="header__container container">
 			<div class="header__container-inner-wrapper">
 				<a class="header__logo" href="#">
-					<img src="./images/logo.svg" alt="logo" width="236" height="26">
+					<img class="header__logo-img" src="./images/logo.svg" alt="logo" width="236" height="26">
 				</a>
 				<nav class="navbar">
 					<ul class="navbar__list">
@@ -33,6 +33,10 @@
 						</li>
 					</ul>
 				</nav>
+				<button class="header__list-button">
+					<img class="header__list-button-burg" src="./images/burger.svg" alt="list">
+					<img class="header__list-button-x" src="./images/x.svg" alt="list">
+				</button>
 			</div>
 		</div>
 	</header>
@@ -60,36 +64,48 @@
 				<div class="collection__inner-wrapper">
 					<ul class="collection__list">
 						<li class="collection__item">
-							<h3 class="collection__heading-gran">
-								Gran Espresso
-							</h3>
-							<p class="collection__description">
-								Light and flavorful blend with cocoa and black pepper for an intense experience.
-							</p>
+							<img class="collection__item-img" src="./images/espresso.png" alt="cofe" width="255" height="193">
+							<div class="collection__item-wrapper">
+								<h3 class="collection__heading-gran">
+									Gran Espresso
+								</h3>
+								<p class="collection__description">
+									Light and flavorful blend with cocoa and black pepper for an intense experience.
+								</p>
+							</div>
 						</li>
 						<li class="collection__item">
-							<h3 class="collection__heading-gran">
-								Gran Espresso
-							</h3>
-							<p class="collection__description">
-								Light and flavorful blend with cocoa and black pepper for an intense experience.
-							</p>
+							<img class="collection__item-img" src="./images/cofe2.png" alt="cofe" width="255" height="193">
+							<div class="collection__item-wrapper" >
+								<h3 class="collection__heading-gran">
+									Planalto
+								</h3>
+								<p class="collection__description">
+									Brazilian dark roast with rich and velvety body, and hints of fruits and nuts
+								</p>
+							</div>
 						</li>
 						<li class="collection__item">
-							<h3 class="collection__heading-gran">
-								Gran Espresso
-							</h3>
-							<p class="collection__description">
-								Light and flavorful blend with cocoa and black pepper for an intense experience.
-							</p>
+							<img class="collection__item-img" src="./images/cofe3.png" alt="cofe" width="255" height="193">
+							<div class="collection__item-wrapper">
+								<h3 class="collection__heading-gran">
+									Piccollo
+								</h3>
+								<p class="collection__description">
+									Mild and smooth blend featuring notes of toasted almond and dried cherry
+								</p>
+							</div>
 						</li>
 						<li class="collection__item">
-							<h3 class="collection__heading-gran">
-								Gran Espresso
-							</h3>
-							<p class="collection__description">
-								Light and flavorful blend with cocoa and black pepper for an intense experience.
-							</p>
+							<img class="collection__item-img" src="./images/cofe4.png" alt="cofe" width="255" height="193">
+							<div class="collection__item-wrapper">
+								<h3 class="collection__heading-gran">
+									Danche
+								</h3>
+								<p class="collection__description">
+									Ethiopian hand-harvested blend densely packed with vibrant fruit notes
+								</p>
+							</div>
 						</li>
 					</ul>
 				</div>
