--- a/index.html
+++ b/index.html
@@ -125,28 +125,34 @@
 					<div class="choose__bottom">
 						<ul class="choose__list">
 							<li class="choose__bottom-item">
-								<h2 class="choose__item-heading-1">
-									Exclusive benefits
-								</h2>
-								<p class="choose__item-text">
-									Special offers and swag when you subscribe, including 30% off your first shipment.
-								</p>
+								<div class="choose__bottom-item-wrapper"> 
+									<h2 class="choose__item-heading-1">
+										Exclusive benefits
+									</h2>
+									<p class="choose__item-text">
+										Special offers and swag when you subscribe, including 30% off your first shipment.
+									</p>
+								</div>
 							</li>
 							<li class="choose__bottom-item">
-								<h2 class="choose__item-heading-2">
-									Best quality
-								</h2>
-								<p class="choose__item-text">
-									Discover an endless variety of the world’s best artisan coffee from each of our roasters.
-								</p>
+								<div class="choose__bottom-item-wrapper"> 
+									<h2 class="choose__item-heading-2">
+										Best quality
+									</h2>
+									<p class="choose__item-text">
+										Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+									</p>
+								</div>
 							</li>
 							<li class="choose__bottom-item">
-								<h2 class="choose__item-heading-3">
-									Free shipping
-								</h2>
-								<p class="choose__item-text">
-									We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
-								</p>
+								<div class="choose__bottom-item-wrapper"> 
+									<h2 class="choose__item-heading-3">
+										Free shipping
+									</h2>
+									<p class="choose__item-text">
+										We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+									</p>
+								</div>
 							</li>
 						</ul>
 					</div>
@@ -203,7 +209,7 @@
 		<div class="footer__container container">
 			<div class="footer__inner-wrapper">
 				<a class="footer__logo" href="#">
-					<img src="./images/logo2.svg" alt="logo" width="235" height="25">
+					<img class="footer__logo-img" src="./images/logo2.svg" alt="logo" width="235" height="25">
 				</a>
 				<nav class="footer__navbar">
 					<ul class="footer__list">
@@ -211,9 +217,13 @@
 							<a class="footer__item-link" href="#">
 								HOME
 							</a>
+						</li>
+						<li class="footer__item">
 							<a class="footer__item-link" href="./about.html">
 								ABOUT US
 							</a>
+						</li>
+						<li class="footer__item">
 							<a class="footer__item-link" href="./plan.html">
 								Create your plan
 							</a>
