--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		<div class="footer__container container">
 			<div class="footer__inner-wrapper">
 				<a class="footer__logo" href="#">
-					<img class="footer__logo-img" src="./images/logo2.svg" alt="logo" width="235" height="25">
+					<img src="./images/logo2.svg" alt="logo" width="235" height="25">
 				</a>
 				<nav class="footer__navbar">
 					<ul class="footer__list">
