--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</header>
 	
-	<main>
+	<main class="main">
 		<section class="cbanner"> 
 			<div class="cbanner__container container">
 				<div class="cbanner__inner-wrapper">
